Add database-backed storage migration
Move runtime moderation data to SQLite/MySQL-backed storage with schema repair and legacy YAML migration so old installs can upgrade without losing data.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>